kotlin/semlang-parser/src/test/semlang/validatorTests/fail/threadedTypes12.sem
// Disallow Tries with threaded parameter types for now
function tryTextOut(out: ~TextOut): ~TextOut {
  let theTry = Try.success<~TextOut>(out)
  Try.assume<~TextOut>(theTry)
}
